Fixed dates alignment issue

--- a/css/default.css
+++ b/css/default.css
@@ -5,10 +5,6 @@ html, body, ul, ol, li, form, fieldset, legend {
 
 }
 
-ul, ol {
-    margin: 1em 0 1em 2em;
-}
-
 body {
 
     /*
@@ -45,4 +41,13 @@ a {
 .content {
     width: 37em;
     margin: auto;
+}
+
+ul, ol {
+    margin: 1em 0 1em 2em;
+}
+
+ul.posts-list span {
+    padding-left: 0.3em;
+    color: #B0B0B0;
 }
